docs: add some padding in <ul> to prevent vertical scrollbars in Chrome.

--- a/playground/frontend/docs/main.css
+++ b/playground/frontend/docs/main.css
@@ -120,6 +120,10 @@ section {
             &:not(ul) {
                 margin-left: 1em;
             }
+
+            &:is(ul) {
+                padding-bottom: 1px;
+            }
         }
     }
 
